<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
		<RadioGroup
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center_horizontal"
		    android:orientation="horizontal" >
	        <RadioButton
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:checked="true"
	            android:text="@string/new_ad_offer" />
	        <RadioButton
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/new_ad_request" />
	    </RadioGroup>
	    <EditText
	        android:id="@+id/Title"
			android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10" 
	        android:hint="@string/new_ad_title">
	            <requestFocus />
	    </EditText>
	    <EditText
	        android:id="@+id/Description"
			android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/new_ad_description"
	        android:inputType="textMultiLine">
	    </EditText>
	    <TextView
	        android:id="@+id/pictureText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="@dimen/leftmargin"
	        android:text="@string/new_ad_picture"
	        android:textAppearance="?android:attr/textAppearanceLarge"/>
	    <ImageView
	    android:id="@+id/new_image"
	    android:layout_width="100dp"
	    android:layout_height="100dp"
	    android:contentDescription="@string/new_ad_picture"
	    android:src="@drawable/ic_launcher" />
	    
	    
	    <Spinner
	        android:id="@+id/filter_county"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:prompt="@string/filter_county"/>
	    <Spinner
	        android:id="@+id/filter_city"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:prompt="@string/filter_city"/>  
	    <Spinner
	        android:id="@+id/filter_category"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:prompt="@string/filter_category"/>
	    
	    <TextView
	        android:id="@+id/email_error"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:visibility="invisible"
	        android:layout_marginLeft="@dimen/leftmargin"
	        android:textColor="@color/red"
	        android:text="@string/new_ad_email_error" />
	    <EditText
	        android:id="@+id/email"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/new_ad_email"
	        android:inputType="textEmailAddress" />
	    <TextView
	        android:id="@+id/email_warning"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="@dimen/leftmargin"
	        android:text="@string/new_ad_email_warning" />
	    
	    <TextView
	        android:id="@+id/phone_error"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:visibility="invisible"
	        android:layout_marginLeft="@dimen/leftmargin"
	        android:textColor="@color/red"
	        android:text="@string/new_ad_phone_error" />
	    <EditText
	        android:id="@+id/phone"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/new_ad_phone"
	        android:inputType="phone" />
	    <TextView
	        android:id="@+id/phone_warning"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="@dimen/leftmargin"
	        android:text="@string/new_ad_phone_warning" />
	    <TextView
	        android:id="@+id/ad_expiration"
	        android:layout_marginTop="30dp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="@dimen/leftmargin"
	        android:text="@string/new_ad_expiration" />
	    <Button
	        android:id="@+id/publish_ad"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/new_ad_publish" />
	</LinearLayout>
</ScrollView>