<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Spinner
        android:id="@+id/filter_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/filter_type" />

    <Spinner
        android:id="@+id/filter_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/filter_category" />

    <Spinner
        android:id="@+id/filter_county"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/filter_county" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Button" />

    <EditText
        android:id="@+id/label1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="User Name" />

    <ImageView
        android:id="@+id/image1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_launcher" />

    <RadioGroup
      
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Ponuda" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Potraznja" />
    </RadioGroup>

</LinearLayout>